test/seq/cmdlists/ttl_mask_err1.err
SyntaxError: Expecting `=` after `ttl_mask`
Line: 2, Column: 10
ttl_mask -= 0x1ffffffff
         ^
